
2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/Makefile, doc/index.htm, doc/thanks.htm, doc/whydisclaim.htm:
	Don't forget to transform the predefined HTML pages.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/data.py, lib/localweb.py, lib/registry.py,
	lib/sgml.py, bin/make-maintain, bin/po-expire, bin/po-matrix,
	bin/po-register, bin/po-tidy-links, bin/postats-data, bin/tp-robot:
	Make names of data directories easily configurable, plus some
	whitespace corrections.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot, README: First framework for a README file that
	should explain how the Translation Project hangs together: how
	the server is configured, what procedures the administrators
	follow.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/Makefile, web/Makefile: Improvements.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/postats-data: Order options, fix a path, whitespace tweaks.

2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, web/Makefile, web/registry.cgi.in:
	Clean it up a bit.

2007-05-24  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/localweb.py, lib/registry.py, web/Makefile:
	Adjust a few paths.

2007-05-24  Benno Schulenberg  <benno@vertaalt.nl>

	* web/layout.html: Make sidebar links relative again.

2007-05-24  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, web/Makefile, web/to-html: Adjust paths.

2007-05-23  Benno Schulenberg  <benno@vertaalt.nl>

	* web/layout.html: Make the links use full URLs again, made
	necessary by the CGI script being in a different directory.

2007-05-23  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/registry.py: Differentiate base URLs of
	html and data.

	* web/html-to-cgi: Lessen the text on redirection pages.

2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/localweb.py, lib/registry.py,