@@ -6,14 +6,12 @@ htmldir = /home/benno/var/TP/html
 
 ALL_FILES = maintainers.all leaders.all translators.all \
             files.all robot.all software.all
-HTMLA_FILES = $(ALL_FILES:.all=.html)
-
-HTM_FILES = index.htm thanks.htm whydisclaim.htm
-HTMLH_FILES = $(HTM_FILES:.htm=.html)
+HTMA_FILES = $(ALL_FILES:.all=.html)
+HTMH_FILES = index.html thanks.html whydisclaim.html
 
 
-all: $(htmldir) $(addprefix $(htmldir)/,$(HTMLA_FILES)) \
-                $(addprefix $(htmldir)/,$(HTMLH_FILES))
+all: $(htmldir) $(addprefix $(htmldir)/,$(HTMA_FILES)) \
+                $(addprefix $(htmldir)/,$(HTMH_FILES))
 
 $(htmldir):
 	mkdir -p $@
@@ -21,6 +19,6 @@ $(htmldir):
 $(htmldir)/%.html: %.all
 	../web/to-html -C $(htmldir) $<
 
-$(htmldir)/%.html: %.htm
+$(htmldir)/%.html: %.html
 	../web/to-html -C $(htmldir) $<
 
